ADD: get trending galleries/ get all public galleries/ get your created galleries